Reverting some getFirst() where get(0) makes more sense in context